--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@chakra-ui/theme-tools": "1.0.4",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "@polkadot/api": "^3.11.1",
     "@polkadot/extension-dapp": "^0.37.2",
     "@polkadot/util-crypto": "^5.9.2",
     "framer-motion": "^3.5.2",
     "next": "latest",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.31.0",
     "rmrk-tools": "git+https://github.com/Yuripetusko/rmrk-tools#chore/add-bundler"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "prettier": "^2.2.1",
     "typescript": "4.0.5"
   },
   "license": "MIT"
