--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "baseUrl": "./src",
     "paths": {
       "components": ["./components/*"],
+      "lib": ["./lib/*"],
     }
   },
   "exclude": ["node_modules"],
