--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "target": "esnext",
     "baseUrl": "./src",
     "paths": {
-      "components": ["./components/*"],
-      "lib": ["./lib/*"],
+      "components*": ["./components/*"],
+      "lib*": ["./lib/*"],
     }
   },
   "exclude": ["node_modules"],
