--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,13 @@
     "noUnusedParameters": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "target": "esnext",
     "baseUrl": "./src",
     "paths": {
       "components*": ["./components/*"],
       "lib*": ["./lib/*"],
-    }
+    },
   },
   "exclude": ["node_modules"],
   "include": ["**/*.ts", "**/*.tsx"]
