--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
@@ -15,9 +16,8 @@
     "@polkadot/api": "^3.11.1",
     "@polkadot/extension-dapp": "^0.37.2",
     "@polkadot/util-crypto": "^5.9.2",
-    "@types/ramda": "0.27.37",
     "framer-motion": "^3.5.2",
-    "next": "latest",
+    "next": "^10.0.7",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -26,9 +26,11 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
+    "@types/ramda": "0.27.37",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "prettier": "^2.2.1",
+    "sharp": "^0.27.2",
     "typescript": "4.0.5"
   },
   "license": "MIT"
