--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.31.0",
+    "react-preloader-icon": "^1.0.0",
     "rmrk-tools": "git+https://github.com/Yuripetusko/rmrk-tools#chore/add-bundler"
   },
   "devDependencies": {
