--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.31.0",
     "react-preloader-icon": "^1.0.0",
-    "rmrk-tools": "git+https://github.com/Yuripetusko/rmrk-tools#chore/add-bundler"
+    "rmrk-tools": "git+https://github.com/Yuripetusko/rmrk-tools#chore/add-bundler",
+    "uint8-to-base64": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
