--- a/package.json
+++ b/package.json
@@ -9,34 +9,45 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.6",
-    "@chakra-ui/react": "^1.3.3",
-    "@chakra-ui/theme-tools": "1.0.4",
+    "@apollo/client": "^3.3.13",
+    "@chakra-ui/icons": "^1.0.7",
+    "@chakra-ui/react": "^1.4.1",
+    "@chakra-ui/theme-tools": "1.1.1",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
-    "@polkadot/api": "^3.11.1",
-    "@polkadot/extension-dapp": "^0.37.2",
-    "@polkadot/util-crypto": "^5.9.2",
-    "dexie": "^3.1.0-alpha.8",
+    "@polkadot/api": "^4.4.1",
+    "@polkadot/extension-dapp": "^0.37.3-11",
+    "@polkadot/keyring": "^6.0.5",
+    "@polkadot/react-identicon": "^0.72.1",
+    "@polkadot/util-crypto": "^6.0.5",
+    "@polkadot/x-randomvalues": "^6.0.5",
+    "@types/emoji-mart": "^3.0.4",
+    "@types/react-icons": "^3.0.0",
+    "dexie": "^3.1.0-alpha.9",
     "dexie-react-hooks": "^1.0.6",
     "framer-motion": "^3.5.2",
     "ipfs": "^0.54.2",
-    "next": "^10.0.7",
+    "next": "^10.0.9",
+    "next-i18next": "^8.1.3",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
+    "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "react-preloader-icon": "^1.0.0",
-    "rmrk-tools": "^0.0.20",
+    "rmrk-tools": "^0.1.8",
+    "subscriptions-transport-ws": "^0.9.18",
     "uint8-to-base64": "^0.2.0",
     "zustand": "^3.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.6.0",
     "@types/ramda": "0.27.37",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sharp": "^0.27.2",
     "typescript": "4.0.5"
